add loader in preview page

--- a/ExamGenerator/templates/download.html
+++ b/ExamGenerator/templates/download.html
@@ -11,8 +11,8 @@
         </div>
         
         <div class="download-buttons">
-            <a class="btn btn-secondary" href="">Review & Download</a>
-            <button class="btn btn-primary" onclick="window.location.href = 'game/{{ ques_type }}' ">Start Exam</a>
+            <a class="btn btn-secondary" href="{{ url_for('views.review_questions') }}">Review & Download</a>
+            <a class="btn btn-primary" href="{{ url_for('game.' + ques_type) }}">Start Exam</a>
         </div>
     </div>
 </div>
