--- a/ExamGenerator/templates/review-ans.html
+++ b/ExamGenerator/templates/review-ans.html
@@ -10,43 +10,53 @@
                 </div>
                 <div class="modal-body">
                     <div class="results correct-ans">
-                        <h4>Correct</h4>
+                        <h4>
+                            <i class="fa-solid fa-circle-check"></i>
+                            <span>Correct</span>
+                        </h4>
                         <h6>1. Which of the following is a primary cause of climate change?</h6>
-                        <div class="answerItem">
-                            <p id="answerNo1">a</p>
-                            <p class="choice_que"></p>
-                        </div>
-                        <div class="answerItem">
-                            <p id="answerNo2">b</p>
-                            <p class="choice_que" id="option2"></p>
-                        </div>
-                        <div class="answerItem">
-                            <p id="answerNo3">c</p>
-                            <p class="choice_que" id="option3"></p>
-                        </div>
-                        <div class="answerItem">
-                            <p id="answerNo4">d</p>
-                            <p class="choice_que" id="option4"></p>
+                        <div class="choices">
+                            <div>
+                                <span class="choice-letter">a</span>
+                                <span class="choice-text">Natural variations in the Earth's orbit</span>
+                            </div>
+                            <div>
+                                <span class="choice-letter">b</span>
+                                <span class="choice-text">Human activities such as burning fossil fuels and deforestation</span>
+                            </div>
+                            <div>
+                                <span class="choice-letter correct-choice">c</span>
+                                <span class="choice-text">Volcanic eruptions</span>
+                            </div>
+                            <div>
+                                <span class="choice-letter">d</span>
+                                <span class="choice-text">Changes in solar radiation</span>
+                            </div>
                         </div>
                     </div>
                     <div class="results wrong-ans">
-                        <h4>Incorrect</h4>
+                        <h4>
+                            <i class="fa-solid fa-circle-xmark"></i>
+                            <span>Incorrect</span>
+                        </h4>
                         <h6>2. Wrong answer of the following is a primary cause of climate change?</h6>
-                        <div class="answerItem">
-                            <p id="answerNo1">a</p>
-                            <p class="choice_que"></p>
-                        </div>
-                        <div class="answerItem">
-                            <p id="answerNo2">b</p>
-                            <p class="choice_que" id="option2"></p>
-                        </div>
-                        <div class="answerItem">
-                            <p id="answerNo3">c</p>
-                            <p class="choice_que" id="option3"></p>
-                        </div>
-                        <div class="answerItem">
-                            <p id="answerNo4">d</p>
-                            <p class="choice_que" id="option4"></p>
+                        <div class="choices">
+                            <div>
+                                <span class="choice-letter correct-choice">a</span>
+                                <span class="choice-text">Natural variations in the Earth's orbit</span>
+                            </div>
+                            <div>
+                                <span class="choice-letter ">b</span>
+                                <span class="choice-text">Human activities such as burning fossil fuels and deforestation</span>
+                            </div>
+                            <div>
+                                <span class="choice-letter">c</span>
+                                <span class="choice-text">Volcanic eruptions</span>
+                            </div>
+                            <div>
+                                <span class="choice-letter wrong-choice">d</span>
+                                <span class="choice-text">Changes in solar radiation</span>
+                            </div>
                         </div>
                     </div>
                 </div>
