--- a/ExamGenerator/templates/preview.html
+++ b/ExamGenerator/templates/preview.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="preview-container">
-    <h1 class="preview-container-title">Page Selection</h1>
+    <h1 class="page-title">Page Selection</h1>
     <div class="preview-main">
         <div class="file-container" id="thumbnail-container">
             <div class="file-header">
@@ -25,7 +25,7 @@
             </div>
         </div>
 
-        <form action="" method="POST" class="options-container">
+        <form action="" method="POST" class="options-container" id="options-form">
             <div>
                 <h2>Options</h2>
             </div>
@@ -38,13 +38,13 @@
                         <option value="select">Select Pages</option>
                     </select>
                     <input type="text" name="pages" placeholder="Example: “1-2, 5”">
-                </div>
+                </div> 
                 <div>
                     <label for="ques-type">Question Type</label>
                     <select name="ques-type" id="ques-type">
                         <option value="identification">Identification</option>
-                        <option value="multiple-choice">Multiple Choice</option>
-                        <option value="true-or-false">True or False</option>
+                        <option value="multiple_choice">Multiple Choice</option>
+                        <option value="true_or_false">True or False</option>
                     </select>
                 </div>
                 <div>
@@ -57,5 +57,9 @@
             </div>
         </form>
     </div>
+</div>
+
+<div class="loader-container">
+    <div class="loader"></div>
 </div>
 {% endblock %}
