--- a/ExamGenerator/templates/download.html
+++ b/ExamGenerator/templates/download.html
@@ -11,7 +11,7 @@
         </div>
         
         <div class="download-buttons">
-            <a class="btn btn-secondary" href="{{ url_for('views.review_questions') }}">Review & Download</a>
+            <a class="btn btn-secondary" href="{{ url_for('views.review_questions', ques_type=ques_type) }}">Review & Download</a>
             <a class="btn btn-primary" href="{{ url_for('game.' + ques_type) }}">Start Exam</a>
         </div>
     </div>
