--- a/ExamGenerator/templates/index.html
+++ b/ExamGenerator/templates/index.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div style="display: block; margin: 5em;">
         <h1>Easygen: Exam Generator</h1>
-        <p style="padding-bottom: 3em;">Transform PDFs into engaging quizzes!</p>
+        <p style="padding-bottom: 3em;">Transform study materials into adaptive quizzes or generate exams instantly. Easygen makes it simple for students and teachers alike.</p>
         <a class="btn btn-primary" href=" {{ url_for('views.upload') }}">Start</a>
     </div>
 {% endblock %}
