added the homepage, dashboard and connected the index to the homepage

--- a/ExamGenerator/templates/index.html
+++ b/ExamGenerator/templates/index.html
@@ -6,6 +6,6 @@
     <div style="display: block; margin: 5em;">
         <h1>Easygen: Exam Generator</h1>
         <p style="padding-bottom: 3em;">Transform PDFs into engaging quizzes!</p>
-        <a class="btn btn-primary" href=" {{ url_for('views.upload') }}">Start</a>
+        <a class="btn btn-primary" href=" {{ url_for('views.homepage') }}">Start</a>
     </div>
 {% endblock %}
