--- a/ExamGenerator/templates/game/identification.html
+++ b/ExamGenerator/templates/game/identification.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/identification.css') }}">
 {% endblock %}
 
-{% block game_title %} {{ game_mode }} {% endblock %} 
+{% block game_title %} View Progress{{ game_mode }} {% endblock %} 
 
 {% block game_header %} {{ game_mode }} {% endblock %} 
 
